// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EndpointManager check tags 1`] = `
<div
  id="translation-coordinator-endpoint-manager"
>
  Set text boundaries
  <br />
  <button
    className="btn btn-primary button-divider"
    onClick={[Function]}
  >
    Start
  </button>
  <button
    className="btn btn-primary button-divider"
    onClick={[Function]}
  >
    End
  </button>
  <br />
  <br />
</div>
`;

exports[`Punctuation add comma button 1`] = `
<button
  className="btn btn-primary button-divider"
  onClick={[Function]}
>
  ,
</button>
`;

exports[`QueueManager check tags 1`] = `
<div
  id="translation-coordinator-queue-manager"
>
  Manage the translation queue
  <br />
  <button
    className="btn btn-primary button-divider"
    onClick={[Function]}
  >
    Clear Queue
  </button>
  <br />
  <br />
</div>
`;

exports[`Spacing add whitespace button 1`] = `
<button
  className="btn btn-primary button-divider"
  onClick={[Function]}
>
  whitespace
</button>
`;

exports[`TextManager check tags 1`] = `
<div
  id="translation-coordinator-text-manager"
>
  Punctuation
  <br />
  <Punctuation
    addText={[MockFunction]}
    key="text-manager-0-,"
    punct=","
  />
  <Punctuation
    addText={[MockFunction]}
    key="text-manager-1-."
    punct="."
  />
  <Punctuation
    addText={[MockFunction]}
    key="text-manager-2-'"
    punct="'"
  />
  <Punctuation
    addText={[MockFunction]}
    key="text-manager-3-\\""
    punct="\\""
  />
  <br />
  <br />
  Spacing
  <br />
  <Spacing
    addText={[MockFunction]}
    description="whitespace"
    key="text-manager-0-whitespace"
    spacing=" "
  />
  <br />
  <br />
  Custom Text
  <CustomText
    addText={[MockFunction]}
  />
</div>
`;

exports[`TranslationCoordinator check tags 1`] = `
<div
  className="option"
  id="translation-coordinator"
>
  <button
    onClick={[Function]}
  >
    Close
  </button>
  <br />
  <b
    className="option-header"
  >
    Translation Coordinator
  </b>
  <br />
  <br />
  <EndpointManager
    setEndpoint={[MockFunction]}
  />
  <QueueManager
    clearQueue={[MockFunction]}
  />
  <TextManager
    addText={[MockFunction]}
  />
  <br />
  <br />
  <button
    className="btn btn-primary button-divider"
    onClick={[Function]}
  >
    Get Translations
  </button>
</div>
`;
